Generated code reduction.